# gylogsync-direct

./: .gitignore  Package.swift  README.md  THIRD_PARTY_LICENSES.md  build_app.sh  build_rust.sh
Resources/LensProfiles/: iPhone17pro_100mm.json  iPhone17pro_13mm.json  iPhone17pro_24mm.json
Sources/CGyroflowBridge/: module.modulemap
Sources/CGyroflowBridge/include/: gyroflow_bridge.h
Sources/GyLogSync/: GyLogSyncApp.swift
Sources/GyLogSync/Logic/: AudioTrimmer.swift  FileUtils.swift  GCSVParser.swift  GyroflowBridge.swift  GyroflowProjectBookmarks.swift  ProResTimingFixer.swift  ReportWriter.swift  VideoProcessor.swift
Sources/GyLogSync/Views/: ContentView.swift
Sources/GyLogSyncTest/: main.swift
Sources/GyroflowSyncHelper/: main.swift
docs/: SPEC_v2.0-beta.md  TUTORIAL.md
rust-bridge/: Cargo.toml
rust-bridge/src/: lib.rs
