[package]
name = "gylogsync-bridge"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
gyroflow-core = { git = "https://github.com/gyroflow/gyroflow.git", default-features = false, features = ["use-opencv"] }
serde_json = "1"
parking_lot = "0.12"
log = "0.4"
env_logger = "0.11"
libc = "0.2"
itertools = "0.14"

[profile.release]
opt-level = 2
lto = "thin"
strip = true
